--- a/UII Act 5/app_peliculas/templates/index.html
+++ b/UII Act 5/app_peliculas/templates/index.html
@@ -1,1 +1,34 @@
-<h1> hola netflix</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Lista de peliculas</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        table { width: 50%; border-collapse: collapse; }
+        th, td { border: 1px solid black; padding: 8px; text-align: left; }
+        th { background-color: #f2f2f2; }
+    </style>
+</head>
+<body>
+    <h1>Lista de peliculas</h1>
+    <table>
+        <tr>
+            <th>Titulo</th>
+            <th>descripcion</th>
+            <th>fecha_lanzamiento</th>
+        </tr>
+        {% for peliculas in peliculas %}
+        <tr>
+            <td>{{ pelicula.titulo }}</td>
+            <td>{{ pelicula.descripcion}}</td>
+            <td>{{ pelicula.fecha_lanzamiento}}</td>
+        </tr>
+        {% empty %}
+        <tr>
+            <td colspan="3">No hay estudiantes registrados.</td>
+        </tr>
+        {% endfor %}
+    </table>
+</body>
+</html>
